--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
-    <string name="title_activity_main_activity3">MainActivity3</string>
+    <string name="title_activity_main_webViewLauncher">WebViewLauncher</string>
 
 </resources>
