--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,10 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_websearch">Search</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
-    <string name="title_activity_main_webViewLauncher">WebViewLauncher</string>
-
+    <string name="title_activity_main_webViewLauncher">Demo</string>
+    <string name="drawer_open">Drawer is opened</string>
+    <string name="drawer_close">Drawer is closed</string>
+    <string name="global_title">推酷</string>
 </resources>
